Clean Maven and PIT output on JDK 25